--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQzx5ALyoWMT68Pf8x3P+l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/OriginalGuru/getting-started-with-python-in-google-colab/blob/main/getting_started_with_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dylanfranklin469/comp_phys-lec-1/blob/main/getting_started_with_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -68,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bn2SNCnsz_xi",
-        "outputId": "de6e832e-5bc6-468b-ef36-6a798672d962"
+        "outputId": "8bfd45a1-dadd-43ff-9a18-890f649dd462"
       },
       "execution_count": null,
       "outputs": [
@@ -94,12 +93,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"Nice to meet you!\")"
+      ],
       "metadata": {
-        "id": "jt_WW0s6_z_f"
+        "id": "jt_WW0s6_z_f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "baad1c6a-3e18-4722-f9d7-99ba5b415bee"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nice to meet you!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -132,7 +145,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "alDGtnmf19Xf",
-        "outputId": "a626bbfc-0290-4234-d5a1-071aefb9abaa"
+        "outputId": "f86527b8-c1c6-4fe4-b097-28ca92def67c"
       },
       "execution_count": null,
       "outputs": [
@@ -161,12 +174,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "varName = \"Dylan\"\n",
+        "print(\"Hello, \"+ varName + \"!\")"
+      ],
       "metadata": {
-        "id": "5QW0P4Vw_yQ_"
+        "id": "5QW0P4Vw_yQ_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5cedf87c-bb09-457d-ad1f-5a6b85a824b8"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Dylan!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -231,12 +259,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nums = [1, 5, 3, 7, 8, 10]\n",
+        "print(sum(nums))\n",
+        "print(len(nums))"
+      ],
       "metadata": {
-        "id": "Jc7TWeTm3kX6"
+        "id": "Jc7TWeTm3kX6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "acce79b4-9514-49f4-c3fe-5dc864a4576f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "34\n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,17 +310,17 @@
         "word = \"hello\"\n",
         "\n",
         "print(type(word))\n",
-        "#print(dir(word)[:15])  # first 15 items for a glimpse\n",
+        "print(dir(word)[:15])  # first 15 items for a glimpse\n",
         "\n",
-        "# Try help:\n",
-        "#help(str.upper)  # documentation for one method"
+        "#Try help:\n",
+        "help(str.upper)  # documentation for one method"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NRrnm3SE4NFM",
-        "outputId": "78f52877-7b07-4646-e5c6-10912ca7966a"
+        "outputId": "20b70a17-8bb3-4411-c8d7-06fcf0b5cc4a"
       },
       "execution_count": null,
       "outputs": [
@@ -283,7 +328,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'str'>\n"
+            "<class 'str'>\n",
+            "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__']\n",
+            "Help on method_descriptor:\n",
+            "\n",
+            "upper(self, /) unbound builtins.str method\n",
+            "    Return a copy of the string converted to uppercase.\n",
+            "\n"
           ]
         }
       ]
@@ -302,6 +353,46 @@
       "metadata": {
         "id": "K0awzQVL5LJ8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listA = [20, 39, 20, 10]\n",
+        "name = \"Dylan F\"\n",
+        "\n",
+        "print(type(20))\n",
+        "print(type(listA))\n",
+        "print(type(name))\n",
+        "\n",
+        "#dir(str)\n",
+        "print(str.upper(name))\n",
+        "print(name.replace(\"F\", \"Some last name\"))\n",
+        "#help(list.append)\n",
+        "#help(str.split)\n",
+        "#str?\n",
+        "#str??"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RPSZCbj7B5ih",
+        "outputId": "cde8f3e0-14ff-4340-9735-220bf251638f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'list'>\n",
+            "<class 'str'>\n",
+            "DYLAN F\n",
+            "Dylan Some last name\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -360,12 +451,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "my_Var = \"I fixed it!\"\n",
+        "num = 20\n",
+        "x = my_Var + num"
+      ],
       "metadata": {
-        "id": "XXLgNKki6Gkg"
+        "id": "XXLgNKki6Gkg",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        },
+        "outputId": "8f346594-d9f4-4eab-95c6-7fd901f4f007"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "can only concatenate str (not \"int\") to str",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3462756696.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmy_Var\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"I fixed it!\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_Var\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -391,23 +503,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
+          "base_uri": "https://localhost:8080/"
         },
         "id": "eCIwjEaT7Fa_",
-        "outputId": "4257f499-40ad-4be3-d5c5-0eb14a2f8fd8"
+        "outputId": "aae3229b-cbbe-4a34-ad23-6cc8ce2ab480"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'my_pet' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-4209057521.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Run this second\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_pet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'my_pet' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n"
           ]
         }
       ]
@@ -421,7 +528,7 @@
       "metadata": {
         "id": "5WCzLhBR-R1s"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -443,12 +550,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "%whos"
+      ],
       "metadata": {
-        "id": "DdcQPO4kAQfC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WuuwxhPQErQk",
+        "outputId": "8cad4399-71af-47f6-e279-2ec7c5c8784a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Variable   Type    Data/Info\n",
+            "----------------------------\n",
+            "my_pet     str     cat\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
