--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMQzx5ALyoWMT68Pf8x3P+l"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
