saving to new repository

--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQzx5ALyoWMT68Pf8x3P+l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/OriginalGuru/getting-started-with-python-in-google-colab/blob/main/getting_started_with_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/IntroComputationalPhysics-UNT/getting-started-with-python-in-colab-nworbehc/blob/main/getting_started_with_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -93,13 +92,36 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "My name is Che Brown and I am a physics student"
+      ],
       "metadata": {
-        "id": "jt_WW0s6_z_f"
+        "id": "fp1ljsMeArCN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Nice to meet you!\")"
+      ],
+      "metadata": {
+        "id": "jt_WW0s6_z_f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee0b2aaa-4815-4356-fdd7-611e0c6e5a78"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nice to meet you!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,12 +183,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "name = input(\"What is your name?\")\n",
+        "print(\"Hello\",name+\", it is nice to meet you!\")"
+      ],
       "metadata": {
-        "id": "5QW0P4Vw_yQ_"
+        "id": "5QW0P4Vw_yQ_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a6e9e112-e617-4d73-fa3a-d79bb9768b6a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name?Che\n",
+            "Hello Che, it is nice to meet you!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -231,12 +269,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "primes = [2,3,5,7,11,13,17,19,23,29]\n",
+        "length = len(primes) #These are the first 10 prime numbers, should =10\n",
+        "sum = sum(primes)\n",
+        "print(sum/length)"
+      ],
       "metadata": {
-        "id": "Jc7TWeTm3kX6"
+        "id": "Jc7TWeTm3kX6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9223d243-f458-49fe-fa6c-a38dc1c17a0c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12.9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -275,9 +330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NRrnm3SE4NFM",
-        "outputId": "78f52877-7b07-4646-e5c6-10912ca7966a"
+        "outputId": "137e03b9-9912-449a-8dee-1c8923bf883a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,6 +357,56 @@
       "metadata": {
         "id": "K0awzQVL5LJ8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = 2\n",
+        "mylist = [\"Alabama\", \"Alaska\", \"Arizona\", \"Arkansas\"]\n",
+        "name = \"Franklin Benjamin\"\n",
+        "print(\"Number =\",type(number),\"\\nList =\",type(mylist),\"\\nName =\",type(name))\n",
+        "\n",
+        "name = name.replace(\"F\",\"D\")\n",
+        "name = name.replace(\"B\",\"P\")\n",
+        "name = name.upper()\n",
+        "print(\"\\n\"+name)\n",
+        "\n",
+        "mylist.append(\"Idontcareizona\")\n",
+        "bama = mylist[0]\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        },
+        "id": "0hsTefmpCWmh",
+        "outputId": "a5ad378c-2d90-4473-f940-d35d39a0979c"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number = <class 'int'> \n",
+            "List = <class 'list'> \n",
+            "Name = <class 'str'>\n",
+            "\n",
+            "DRANKLIN PENJAMIN\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "must be str or None, not int",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3543485887.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mmylist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Idontcareizona\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mbama\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmylist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mbama\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbama\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbama\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: must be str or None, not int"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
