--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -371,18 +371,22 @@
         "name = name.upper()\n",
         "print(\"\\n\"+name)\n",
         "\n",
-        "mylist.append(\"Idontcareizona\")\n",
-        "bama = mylist[0]\n"
+        "mylist.append(\"I dont care izona\")\n",
+        "arizona = mylist[4]\n",
+        "print(arizona)\n",
+        "print(arizona.split())\n",
+        "\n",
+        "number?\n",
+        "name??"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 280
+          "base_uri": "https://localhost:8080/"
         },
         "id": "0hsTefmpCWmh",
-        "outputId": "a5ad378c-2d90-4473-f940-d35d39a0979c"
+        "outputId": "27e5cc31-70b7-4839-9e41-6acfe95fff86"
       },
-      "execution_count": 35,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,18 +396,9 @@
             "List = <class 'list'> \n",
             "Name = <class 'str'>\n",
             "\n",
-            "DRANKLIN PENJAMIN\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "must be str or None, not int",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3543485887.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mmylist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Idontcareizona\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mbama\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmylist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mbama\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbama\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbama\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: must be str or None, not int"
+            "DRANKLIN PENJAMIN\n",
+            "I dont care izona\n",
+            "['I', 'dont', 'care', 'izona']\n"
           ]
         }
       ]
