--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -460,12 +460,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#print(heisse)\n",
+        "heisse = \"chë braun\"\n",
+        "print(heisse)\n",
+        "print(\"I fixed it\")\n",
+        "\n",
+        "kartoffeln = \"potato\"\n",
+        "neunzig = 90\n",
+        "#print(neunzig+kartoffeln)\n",
+        "print(str(neunzig)+\" \"+kartoffeln)"
+      ],
       "metadata": {
-        "id": "XXLgNKki6Gkg"
+        "id": "XXLgNKki6Gkg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b336aa2d-ae87-4308-fa91-a5962ca2179f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "chë braun\n",
+            "I fixed it\n",
+            "90 potato\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
