--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -515,23 +515,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
+          "base_uri": "https://localhost:8080/"
         },
         "id": "eCIwjEaT7Fa_",
-        "outputId": "4257f499-40ad-4be3-d5c5-0eb14a2f8fd8"
+        "outputId": "40fa6968-f44a-40fb-c363-ed3b04b0daf1"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'my_pet' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-4209057521.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Run this second\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_pet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'my_pet' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cat\n"
           ]
         }
       ]
@@ -545,7 +540,7 @@
       "metadata": {
         "id": "5WCzLhBR-R1s"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -567,12 +562,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "benjamin = \"Franklin\"\n",
+        "print(benjamin)\n",
+        "del(benjamin)\n",
+        "benjamin??"
+      ],
       "metadata": {
-        "id": "DdcQPO4kAQfC"
+        "id": "DdcQPO4kAQfC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c4a4d903-85d5-4f71-d0f1-7a68359766f7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Franklin\n",
+            "Object `benjamin` not found.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -595,12 +608,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "num = 0\n",
+        "for i in range(1,10):\n",
+        "  num += i + random.randint(1,10)\n",
+        "  print(num)\n",
+        "avg = num/10\n",
+        "print(\"\\nThe average was \"+str(avg))"
+      ],
       "metadata": {
-        "id": "h4Nw_MVa-zXd"
+        "id": "h4Nw_MVa-zXd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cf1c2885-4243-4c27-c4a3-6caabd39ae54"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "14\n",
+            "20\n",
+            "27\n",
+            "36\n",
+            "47\n",
+            "64\n",
+            "73\n",
+            "91\n",
+            "\n",
+            "The average was 9.1\n"
+          ]
+        }
+      ]
     }
   ]
 }
