--- a/getting_started_with_colab.ipynb
+++ b/getting_started_with_colab.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMQzx5ALyoWMT68Pf8x3P+l",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/OriginalGuru/getting-started-with-python-in-google-colab/blob/main/getting_started_with_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -94,12 +82,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"Nice to meet you!\")"
+      ],
       "metadata": {
-        "id": "jt_WW0s6_z_f"
+        "id": "jt_WW0s6_z_f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7dce028d-9f5a-4ac0-e8ca-08169ee8c189"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nice to meet you!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,12 +163,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = \"Matt\"\n",
+        "print(f\"Hello, {a}!\")"
+      ],
       "metadata": {
-        "id": "5QW0P4Vw_yQ_"
+        "id": "5QW0P4Vw_yQ_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "85a78f7c-c61b-4fbe-c26e-2c880f3fd9b9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Matt!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -231,12 +248,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "my_list = [1, 2, 3, 4, 5]\n",
+        "print(sum(my_list))\n",
+        "print(sum(my_list) / len(my_list))"
+      ],
       "metadata": {
-        "id": "Jc7TWeTm3kX6"
+        "id": "Jc7TWeTm3kX6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "006b7b59-d103-4348-f575-ad3ff3d809ba"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "3.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,25 +299,31 @@
         "word = \"hello\"\n",
         "\n",
         "print(type(word))\n",
-        "#print(dir(word)[:15])  # first 15 items for a glimpse\n",
+        "print(dir(word)[:15])  # first 15 items for a glimpse\n",
         "\n",
         "# Try help:\n",
-        "#help(str.upper)  # documentation for one method"
+        "help(str.upper)  # documentation for one method"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NRrnm3SE4NFM",
-        "outputId": "78f52877-7b07-4646-e5c6-10912ca7966a"
+        "outputId": "69860b16-341d-4c82-a0bb-5b0adb8b9c39"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'str'>\n"
+            "<class 'str'>\n",
+            "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__']\n",
+            "Help on method_descriptor:\n",
+            "\n",
+            "upper(self, /) unbound builtins.str method\n",
+            "    Return a copy of the string converted to uppercase.\n",
+            "\n"
           ]
         }
       ]
@@ -302,6 +342,68 @@
       "metadata": {
         "id": "K0awzQVL5LJ8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(1)\n",
+        "type([1, 2, 3])\n",
+        "type(\"Matt\")\n",
+        "\n",
+        "string = \"matt\"\n",
+        "\n",
+        "#dir(str)\n",
+        "\n",
+        "#print(string.upper())\n",
+        "#print(string.replace(\"t\", \"T\"))\n",
+        "\n",
+        "help(list.append)\n",
+        "help(str.split)\n",
+        "\n",
+        "str??\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qXlauy0_DtOb",
+        "outputId": "b65e89fb-0f17-4070-8912-b82a1ac47105"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on method_descriptor:\n",
+            "\n",
+            "append(self, object, /) unbound builtins.list method\n",
+            "    Append object to the end of the list.\n",
+            "\n",
+            "Help on method_descriptor:\n",
+            "\n",
+            "split(self, /, sep=None, maxsplit=-1) unbound builtins.str method\n",
+            "    Return a list of the substrings in the string, using sep as the separator string.\n",
+            "\n",
+            "      sep\n",
+            "        The separator used to split the string.\n",
+            "\n",
+            "        When set to None (the default value), will split on any whitespace\n",
+            "        character (including \\n \\r \\t \\f and spaces) and will discard\n",
+            "        empty strings from the result.\n",
+            "      maxsplit\n",
+            "        Maximum number of splits.\n",
+            "        -1 (the default value) means no limit.\n",
+            "\n",
+            "    Splitting starts at the front of the string and works to the end.\n",
+            "\n",
+            "    Note, str.split() is mainly useful for data that has been intentionally\n",
+            "    delimited.  With natural text that includes punctuation, consider using\n",
+            "    the regular expression module.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -360,12 +462,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "my_variable = \"I fixed it!\"\n",
+        "#print(my_variable)\n",
+        "\n",
+        "print(\"Matt\" + 1)"
+      ],
       "metadata": {
-        "id": "XXLgNKki6Gkg"
+        "id": "XXLgNKki6Gkg",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        },
+        "outputId": "a8a60216-c7b8-4cc1-d7f3-bbdc0e67eaff"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "can only concatenate str (not \"int\") to str",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1736097966.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(my_variable)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Matt\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -392,12 +516,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 166
+          "height": 159
         },
         "id": "eCIwjEaT7Fa_",
-        "outputId": "4257f499-40ad-4be3-d5c5-0eb14a2f8fd8"
+        "outputId": "718bfc38-12b6-486c-f8df-1927e414a7b4"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "error",
@@ -416,13 +540,29 @@
       "cell_type": "code",
       "source": [
         "# Run this first\n",
-        "my_pet = \"cat\""
+        "my_pet = \"cat\"\n",
+        "\n",
+        "%whos"
       ],
       "metadata": {
-        "id": "5WCzLhBR-R1s"
+        "id": "5WCzLhBR-R1s",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a439fdb0-9259-4192-da05-d1fe45701d3e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Variable   Type    Data/Info\n",
+            "----------------------------\n",
+            "my_pet     str     cat\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -443,12 +583,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "$whos"
+      ],
       "metadata": {
-        "id": "DdcQPO4kAQfC"
+        "id": "DdcQPO4kAQfC",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "e7945606-6124-4779-87e0-1049dfac9729"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-3953351798.py, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-3953351798.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    $whos\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
